--- a/src/components/pages/work.module.scss
+++ b/src/components/pages/work.module.scss
@@ -68,6 +68,7 @@
         -moz-user-select: none; /* Firefox */
         -ms-user-select: none; /* IE10+/Edge */
         user-select: none; /* Standard */
+        white-space: nowrap;
     }
     h1:nth-child(1) {
         left: 10vw;
